--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,11 @@
 <resources>
     <string name="app_name">Darts</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
+    <string name="title_home">Game</string>
+    <string name="title_newgame">New Game</string>
     <string name="title_notifications">Notifications</string>
     <string name="next_button">Next</string>
+    <string name="start_button">Start</string>
+    <string name="player1">Player 1</string>
+    <string name="player2">Player 2</string>
+    <string name="name">Name</string>
 </resources>
