--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Darts</string>
     <string name="title_home">Game</string>
     <string name="title_newgame">New Game</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_stats">Statistics</string>
     <string name="next_button">Next</string>
     <string name="start_button">Start</string>
     <string name="player1">Player 1</string>
